Fixed textarea still wrapping in Edge

--- a/wwwroot/style/wptest.css
+++ b/wwwroot/style/wptest.css
@@ -420,7 +420,7 @@ output-pane {
 		appearance:none; -webkit-appearance: none;
 		background:transparent!important; border:none!important; padding:0; margin:0; 
 		position:absolute; top:0; left:10px; right:0; bottom:0; width:calc(100% - 10px); height:100%;
-		white-space:pre; font-family:'Consolas','Courier New',monospace; font-size:13px; line-height:1.4;
+		white-space:nowrap; font-family:'Consolas','Courier New',monospace; font-size:13px; line-height:1.4;
 		color:black; tab-size:4; outline:none!important;
 	}
 
